# pathtracer-Rust

./: Cargo.toml  LICENSE
pathtracer/: Cargo.toml
pathtracer-cli/: Cargo.toml
pathtracer-cli/src/: earth_scene.rs  main.rs
pathtracer-ui/: Cargo.toml
pathtracer-ui/src/: main.rs
pathtracer/src/: camera.rs  default_scene.rs  hittable.rs  lib.rs  material.rs  ray.rs  scene.rs  texture.rs  util.rs
scenes/: balls.toml  earth.toml
