[package]
name = "pathtracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = { version = "0.22.9", features = ["serde"] }
rand = "0.8.5"
rgb = "0.8.36"
serde = { version = "1.0.160", features = ["derive"] }
png = "0.17.8"
